# syncord

./: .gitignore  main.py  pyproject.toml  requirements.txt  sync_commands.py
syncord/: config.py  discord_bot.py  maps.py  telegram_bot.py  utils.py
